--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -41,6 +41,7 @@
 .main-data {
     font-size: 36px;
     text-align: center;
+    margin-bottom: -85px;
    
 }
 .main-data img{
@@ -79,8 +80,8 @@
 }
 
 .main-middle img {
-    width: 170%;
-    height: 100%;
+    width: 140%;
+    height: 120%;
 }
 
 .main-content-img {
@@ -99,7 +100,7 @@
     flex-direction: column;
     justify-content: center;
     position: relative;
-    top: -60px;
+    top: -20px;
     transition: all 0.5s ease;
 }
 .main-right {
@@ -108,7 +109,7 @@
     justify-content: center;
     align-items: flex-end;
     position: relative;
-    top: -60px;
+    top: -20px;
     transition: all 0.5s ease;
 }
 .main-right.show {
@@ -153,7 +154,7 @@
     padding: 4px 10px;
     border-radius: 50px;
     position: relative;
-    top: -150px;
+    margin-top: -184px;
 }
 
 .btn-arrow {
