--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -28,6 +28,8 @@
     border-radius: 38.24px;
     border: 1px solid black;
     background: #FFFFFF1A;
+    font-size: 16px;
+    font-weight: 800;
 }
 
 .main-btn img {
