--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -39,7 +39,7 @@
   }
 
   .footer-container-middle-one{
-    margin-top: 50px;
+    margin-top: 15px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -88,7 +88,7 @@
   
   .footer-container-middle {
     display: grid;
-    grid-template-columns: 1.5fr 0.5fr 0.5fr 1fr;
+    grid-template-columns: 1.5fr 0.5fr 0.5fr;
     justify-items: center;
     align-items: start;
     margin: 30px 10px;
