--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,4 +1,4 @@
-.skills-header{
+.skills-header {
     margin-top: 25%;
     display: flex;
     justify-content: center;
@@ -10,17 +10,31 @@
     align-items: center;
     justify-content: center;
     margin-top: 2%;
-   
+
 }
 
-.skills{
+.skills {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .skills img {
-    padding: 10px 50px;
-    width: 100px;
-    height: 100px;
+    padding: 5px 60px;
+    width: 80px;
+    height: 80px;
+}
+
+.skills img:hover {
+    filter: drop-shadow(5px 5px 25px #ff8000);
+    transition: transform .1s;
+    width: 90px;
+    height: 90px;
+}
+
+.skills h4 {
+    font-size: 20px;
+    font-weight: 600;
+    font-family: "Hanken Grotesk", sans-serif;
+
 }
