--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -178,3 +178,8 @@
   .footer-email h3{
     margin-left: -70px;
   }
+
+  .footer-contact-link{
+    text-decoration: none;
+    color: white;
+  }
