--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -71,7 +71,7 @@
 .nav-menu-right .nav-item:hover {
     height: 40px;
     border-radius: 50px;
-    background: #645f5f;
+    background: #cc6c30;
 }
 
 /* Logo hover effects */
