--- a/src/components/ProjectSection/ProjectSection.css
+++ b/src/components/ProjectSection/ProjectSection.css
@@ -22,7 +22,17 @@
     width: 200px;
     height: 50px;
     border-radius: 50px;
+    font-size: 20px;
+    font-weight: 700;
     border: none;
-    background: #cc6c30;
+    background: #FD853A;
     color: white;
+    cursor: pointer;
+}
+
+
+.project-left p {
+    font-size: 20px;
+    color: #344054;
+    margin-bottom: 30px;
 }
