--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -36,6 +36,7 @@
 }
 
 .skills h4 {
+    color: #344054;
     font-size: 20px;
     font-weight: 600;
     font-family: "Hanken Grotesk", sans-serif;
