--- a/src/pages/ProjectList.css
+++ b/src/pages/ProjectList.css
@@ -9,6 +9,9 @@
     justify-content: center;
 
 }
+.project-title{
+    color: #344054;
+}
 
 .project-container- {
     padding: 25px;
@@ -34,10 +37,11 @@
     height: 50px;
     border-radius: 50px;
     border: none;
-    background: #cc6c30;
+    background: #FD853A;
     color: white;
     font-size: 16px;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .projects-data-display{
@@ -47,13 +51,13 @@
 .project-data-main{
     font-size: 20px;
     font-weight: 800;
-    color: #cc6c30;
+    color: #FD853A;
     margin-bottom: 30px;
 }
 
 .project-data-main span{
-    font-size: 18px;
-    color: #000000;
+    font-size: 20px;
+    color: #344054;
     font-weight: 400;
 }
 
@@ -61,6 +65,8 @@
     font-size: 40px;
     font-weight: 900;
     text-align: center;
+    margin-bottom: 30px;
+    color: #344054;
 }
 
 .project-video{
@@ -70,7 +76,7 @@
 }
 
 .project-data-screenshot{
-    margin-bottom: 30px;
+    margin-bottom: 60px;
 }
 
 
@@ -93,8 +99,21 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: 35px;
     gap: 50px;
 }
+
+.project-data-skills li img {
+    transition: filter .1s, transform .1s;
+}
+
+.project-data-skills li img:hover {
+    filter: drop-shadow(5px 5px 25px #ff8000);
+    transform: scale(1.1);
+    width: 90px;
+    height: 90px;
+}
+
 
 
 .project-data-skills ul li {
@@ -103,7 +122,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 30px;
+    margin: 0px 30px;
+    gap: 30px;
+    color: #344054;
+    font-size: 20px;
+    font-weight: 600;
+    font-family: "Hanken Grotesk", sans-serif;
 }
 
 .project-data-content{
@@ -126,5 +150,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
+    color: #344054;
 }
