--- a/src/components/ProjectSection/ProjectSection.css
+++ b/src/components/ProjectSection/ProjectSection.css
@@ -1,38 +1,20 @@
-.project-header {
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
+.project-header h1 {
+  margin-top: 30px;
+  text-align: center;
+  font-size: 64px;
+  font-weight: 500;
+  color: #344054;
+  margin-bottom: 30px;
 }
 
-.project-header h1{
-    color: #344054;
-}
-
-.project-container{
-    display: flex;
-    align-items: center;
-}
-.project-left{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 40px;
-}
-.project-left button{
-    width: 200px;
-    height: 50px;
-    border-radius: 50px;
-    font-size: 20px;
-    font-weight: 700;
-    border: none;
-    background: #FD853A;
-    color: white;
-    cursor: pointer;
-}
-
-
-.project-left p {
-    font-size: 20px;
-    color: #344054;
-    margin-bottom: 30px;
+.project-btn button{
+  width: 200px;
+  height: 50px;
+  border-radius: 50px;
+  font-size: 20px;
+  font-weight: 700;
+  border: none;
+  background: #FD853A;
+  color: white;
+  cursor: pointer;
 }
