--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -98,7 +98,9 @@
     display: none;
 }
 
-.nav-item a {
+.nav-resume, .nav-item {
     text-decoration: none;
     color: white;
+    cursor: pointer;
 }
+
