--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     margin-top: 2%;
+    pointer-events: none;
 
 }
 
@@ -20,6 +21,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
+    pointer-events: auto;
 }
 
 .skills img {
@@ -42,3 +45,141 @@
     font-family: "Hanken Grotesk", sans-serif;
 
 }
+
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    max-width: 500px;
+    width: 100%;
+    max-height: 65vh;
+    z-index: 1000;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.75);
+    z-index: 999;
+}
+
+.exp-code main{
+    border: none;
+}
+
+.exp-code-header{
+    font-size: 40px;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 10px;
+    color: #344054;
+}
+
+.exp-code-pre {
+    height: auto;
+    width: 90%;
+    height: 220px;
+    overflow-y: scroll;
+    padding: 20px;
+    background: #1a1818;
+    color: white;
+    border-radius: 20px;
+    overflow-x: scroll;
+    
+}
+
+.code-colors{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.orange{
+    width: 15px;
+    height: 15px;
+    background-color: #ff5100;
+    border-radius: 100px;
+}
+.yellow{
+    width: 15px;
+    height: 15px;
+    background-color: #ffbb00;
+    border-radius: 100px;
+}
+.green{
+    width: 15px;
+    height: 15px;
+    background-color: #207c0d;
+    border-radius: 100px;
+}
+
+.exp-code{
+    font-size: 14px;
+    font-weight: 200;
+    line-height: 30px;
+}
+
+.exp-code-btn{
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+    background: #ff8000;
+    width: 150px;
+    height: 50px;
+    border-radius: 50px;
+    border: none;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.exp-btn{
+    display: flex;
+    justify-content: center;
+}
+
+
+
+/* == SCROLLBAR_CSS_START == 
+===============================================================*/
+
+/* / ==== width ==== / */
+.exp-code-pre::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/* / === Track === / */
+.exp-code-pre::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px #979797;
+  border-radius: 10px;
+}
+/* 
+/ ====  Handle ==== / */
+.exp-code-pre::-webkit-scrollbar-thumb {
+  background: #f0f0f0; 
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/* / ==== Handle on hover ==== / */
+.exp-code-pre::-webkit-scrollbar-thumb:hover {
+  background: #ce8d4b;
+}
+
+/* == SCROLLBAR_CSS_END == 
+===============================================================*/
