--- a/src/components/Responsive/Responsive.css
+++ b/src/components/Responsive/Responsive.css
@@ -174,6 +174,19 @@
 
     }
 
+    .modal{
+        max-width: 300px !important;
+    }
+    
+    .exp-code-header{
+        font-size: 20px !important;
+        font-weight: 600 !important;
+    }
+
+    .exp-code{
+        font-size: 12px !important;
+    }
+
     /* About Me Section */
 
 
@@ -531,6 +544,19 @@
         justify-content: space-between !important;
         margin-top: 2%;
 
+    }
+
+    .modal{
+        max-width: 300px !important;
+    }
+    
+    .exp-code-header{
+        font-size: 20px !important;
+        font-weight: 600 !important;
+    }
+
+    .exp-code{
+        font-size: 12px !important;
     }
 
     /* About Me Section */
@@ -893,6 +919,20 @@
 
     }
 
+
+    .modal{
+        max-width: 300px !important;
+    }
+    
+    .exp-code-header{
+        font-size: 20px !important;
+        font-weight: 600 !important;
+    }
+
+    .exp-code{
+        font-size: 12px !important;
+    }
+
     /* About Me Section */
 
 
@@ -1250,6 +1290,19 @@
         justify-content: space-between !important;
         margin-top: 2%;
 
+    }
+
+    .modal{
+        max-width: 300px !important;
+    }
+    
+    .exp-code-header{
+        font-size: 20px !important;
+        font-weight: 600 !important;
+    }
+
+    .exp-code{
+        font-size: 12px !important;
     }
 
     /* About Me Section */
