--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -46,6 +46,8 @@
 
 }
 
+ /* Example skills popup */
+
 
 .modal {
     position: absolute;
@@ -133,23 +135,23 @@
 }
 
 .exp-code-btn{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
     text-align: center;
     background: #ff8000;
-    width: 150px;
-    height: 50px;
     border-radius: 50px;
     border: none;
     color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+.exp-code-btn:hover{
+    transform: scale(1.2);
+    background: red;
 }
 
 .exp-btn{
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 
