--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -93,11 +93,13 @@
     font-size: 18px;
     font-weight: bold;
     margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .company-title {
     font-size: 16px;
     margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .res-span {
