--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -6,6 +6,7 @@
     background-color: #f9f9f9;
     margin-top: 250px;
     height: auto;  /* Ensure the container takes full height for scrolling */
+    justify-content: center;
 }
 
 .resume-left {
