--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -126,18 +126,76 @@
     background: #FD853A;
     border: 1px solid #ffffff;
     padding: 12px 16px;
-    font-size: inherit;
+    font-size: 16px;
     gap: 8px;
     margin-top: 8px;
     cursor: pointer;
-    border-radius: 6px;
+    border-radius: 60px;
   }
   
   .form-container .form-submit-btn:hover {
     background-color: #FD853A;
     border-color: #FD853A;
   }
+
+  .btn-loader{
+    display: flex;
+  }
   
   
+  .success-message {
+    color: green;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 1.4em;
+  }
+
   
-  
+  /* From Uiverse.io by mrpumps31232 */ 
+.loading-wave {
+  width: 200px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.loading-bar {
+  width: 20px;
+  height: 10px;
+  margin: 0 5px;
+  background-color: #FD853A;
+  border-radius: 5px;
+  animation: loading-wave-animation 1s ease-in-out infinite;
+}
+
+.loading-bar:nth-child(2) {
+  animation-delay: 0.1s;
+}
+
+.loading-bar:nth-child(3) {
+  animation-delay: 0.2s;
+}
+
+.loading-bar:nth-child(4) {
+  animation-delay: 0.3s;
+}
+
+@keyframes loading-wave-animation {
+  0% {
+    height: 10px;
+  }
+
+  50% {
+    height: 50px;
+  }
+
+  100% {
+    height: 10px;
+  }
+}
+
+
+
+
+
